# movie_rec

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py  train_log.txt
configs/: config.yaml
configs/data/: movielens.yaml  movielens_1m.yaml
configs/logger/: wandb_mlflow.yaml
configs/model/: hybrid_ensemble.yaml  item_cf.yaml  lightgcn.yaml  ncf.yaml  ngcf.yaml  nmf_ann.yaml  svd.yaml
configs/trainer/: default.yaml
results/: benchmark_results.csv  comparison_table.md
scripts/: benchmark.py  convert_ml1m.py  download_ml1m.sh
src/: __init__.py  train.py
src/api/: __init__.py  app.py  inference.py
src/data/: __init__.py  datamodule.py  graph_builder.py  negative_sampler.py  preprocessor.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  sampled_evaluator.py
src/models/: __init__.py  base.py
src/models/graph/: __init__.py  lightgcn.py  ngcf.py
src/models/hybrid/: __init__.py  ensemble.py
src/models/neural/: __init__.py  ncf.py
src/models/traditional/: __init__.py  item_cf.py  svd.py
src/retrieval/: __init__.py  faiss_index.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: base.html  home.html  index.html  movie_details.html  recommendations.html  top_rated_movies.html  user_profile.html
src/training/: __init__.py  callbacks.py  losses.py  trainer.py
src/utils/: __init__.py  experiment_tracker.py  rich_logging.py
